Add button and debug divs

--- a/map.html
+++ b/map.html
@@ -69,5 +69,10 @@
     <div id="docs">
         <p>This example uses the GeoJSON format.</p>
     </div>
+
+    //button and debug div
+    <button id="store-data">Processed</button>
+	  <div id="demo"></div>
+    
   </body>
 </html>
